--- a/php/src/application/layouts/scripts/panel.phtml
+++ b/php/src/application/layouts/scripts/panel.phtml
@@ -28,7 +28,7 @@
         </div>
 
         <div class="logo">
-            <span class="logo">thePanel<sup style="font-size: 0.3em;">TM</sup> v2.0</span><br/>
+            <span class="logo">thePanel<sup style="font-size: 0.3em;">TM</sup> v2.0</span>
             <?=$this->escape(Model_User::me()->email)?>
         </div>
 
