--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -2,18 +2,12 @@
 <?=$this->icon('wobot')?><br/>
 <?=$this->wobot?>
 
-<? FaZend_Paginator::addPaginator(Model_Decision_History::retrieveByWobot($this->wobot),
-    $this, '1'); ?>
+<?=$this->table()
+    ->setSource(Model_Decision_History::retrieveByWobot($this->wobot))
 
-<?=$this->htmlTable()
-    ->hideColumn('id')
-    ->hideColumn('protocol')
-    ->hideColumn('wobot')
-    ->hideColumn('context')
+    ->addColumn('created', 'Date')
+    ->addColumn('getTitle', 'Title')
+    ->addColumn('result', 'Decision made')
 
-    ->setParser('hash', create_function('$hash', 'return substr($hash, 0, strrpos($hash, "/"));'))
-
-    ->addOption('protocol', 'id', 'id', array('controller'=>'panel', 'action'=>'index', 'doc'=>'protocol'))
-
-    ->setPaginator($this->paginator)
+    ->addOption('created', 'decisions/{id}')
     ?>
