--- a/php/src/application/views/scripts/panel/restrict.phtml
+++ b/php/src/application/views/scripts/panel/restrict.phtml
@@ -8,7 +8,7 @@
     <? endif; ?>
 </p>
 
-<p>To access documents, files, projects and other online materials
-in our site you have to be logged in and have enough access permissions.
-Try to use the form in the top right corner of this page to log in.</p>
+<p>This particular document is not available for you. Here is
+a list of documents that you can access:</p>
 
+<p><?=$this->navigation()->menu(Model_Pages::getInstance())?></p>
