--- a/php/src/application/pages/wobots/_any/decisions/_any.phtml
+++ b/php/src/application/pages/wobots/_any/decisions/_any.phtml
@@ -1,2 +1,11 @@
+<? $decision = new Model_Decision_History($this->segment(3)); ?>
 
-test
+<p>
+    Date: <?=$decision->created?><br/>
+    Title: <?=$decision->getTitle()?><br/>
+    Decision: <b><?=$decision->result?></b>
+</p>
+
+<pre>
+<?=$decision->protocol?>
+</pre>
