--- a/php/src/application/pages/wobots.phtml
+++ b/php/src/application/pages/wobots.phtml
@@ -1,13 +1,9 @@
 <p>Full list of wobots in the system (working now):</p>
 
-<p>
-<? foreach (Model_Wobot::retrieveAll() as $wobot): ?>
+<?=$this->gallery()
+    ->setSource(Model_Wobot::retrieveAll())
+    ->setIcon('wobot')
+    ->setLink('{fullName}')
+    ?>
 
-    <div style="display:inline-block; margin-right: 20px;">
-        <?=$this->icon('wobot')?><br/>
-        <a href="<?=$this->panelUrl('wobots/' . $wobot)?>"><?=$wobot?></a>
-    </div>
-
-<? endforeach; ?>
-</p>
 
