--- a/php/src/application/pages/projects.phtml
+++ b/php/src/application/pages/projects.phtml
@@ -1,3 +1,7 @@
+<p>
+    <a href="<?=$this->link('/PMO/start')?>">start new project</a>
+</p>
+
 <p>Full list of projects:</p>
 
 <?=$this->gallery()
