simple form works

--- a/php/src/application/layouts/scripts/layout.phtml
+++ b/php/src/application/layouts/scripts/layout.phtml
@@ -18,10 +18,10 @@
 ?><?=$this->doctype()?>
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 <head>  
-<?=$this->headTitle()?>
-<?=$this->headMeta()?>
-<?=$this->headLink()?>
-<?=$this->headStyle()?>
+    <?=$this->headTitle()?>
+    <?=$this->headMeta()?>
+    <?=$this->headLink()?>
+    <?=$this->headStyle()?>
 </head> 
 <body>
 
@@ -55,6 +55,6 @@
 </div>
 
 <?=$this->headScript() ?>
-<?=$this->googleAnalytics(false)?>
+<?=$this->googleAnalytics()?>
 </body>
 </html>
