--- a/php/src/application/views/scripts/static/index.phtml
+++ b/php/src/application/views/scripts/static/index.phtml
@@ -5,7 +5,8 @@
 
 <!-- Login line -->
 <div class="ll">
-           <span style="margin-left: 39px;">Welcome, Dear Visitor! | <a href="<?=$this->url(array(), 'panel', true)?>">thePanel 2.0</a></span>
+           <span style="margin-left: 39px;">Welcome, Dear Visitor! |
+               <a href="<?=$this->url(array(), 'panel', true)?>">thePanel 2.0</a></span>
           <?=FaZend_Form::create('Search')->setAction($this->staticUrl('system/search'))?>
 </div>
 
