more layout changes

--- a/php/src/application/pages/projects/_access.phtml
+++ b/php/src/application/pages/projects/_access.phtml
@@ -1,6 +1,7 @@
 
-[ABC]
-yegor256@yahoo.com = rw
+<? foreach ($this->root->projectRegistry as $name=>$project): ?>
 
-[CDE]
+    [<?=$name?>]
+    yegor256@yahoo.com = rw
 
+<? endforeach; ?>
