--- a/php/src/application/views/scripts/css/panel.css
+++ b/php/src/application/views/scripts/css/panel.css
@@ -58,7 +58,7 @@ th {
     th {
         background-color: <?=Model_Colors::BLUE?>;
         color: white;
-        font-weight: bold;
+        font-weight: normal;
     }
 
     tr.even {
