--- a/php/src/application/pages/PMO.phtml
+++ b/php/src/application/pages/PMO.phtml
@@ -1,1 +1,7 @@
 <p>Project Management Office (PMO)</p>
+
+<?=$this->bar()
+    ->setStyle('stairs')
+    ->addLink('registry', 'project registry')
+    ->addLink('start', 'start new project')
+    ?>
