--- a/php/src/application/pages/projects.phtml
+++ b/php/src/application/pages/projects.phtml
@@ -8,7 +8,7 @@
 <?=$this->gallery()
     ->setSource($this->root->projectRegistry)
     ->setIcon('project')
-    ->setLink('{name}')
+    ->setLink('{__key}')
     ?>
 
 
