changes in the structure of pages

--- a/php/src/application/pages/wobots/_init.phtml
+++ b/php/src/application/pages/wobots/_init.phtml
@@ -1,4 +1,3 @@
 <?
-    $exp = explode('/', $this->doc);
-    $this->wobot = Model_Wobot::factory($exp[1]);
+    $this->wobot = Model_Wobot::factory($this->segment(1));
 ?>
