--- a/php/src/application/views/scripts/css/helper/gallery.css
+++ b/php/src/application/views/scripts/css/helper/gallery.css
@@ -7,4 +7,5 @@ div.gallery {
         display:inline-block;
         margin-right: 40px;
         text-align: center;
+        margin-bottom: 20px;
     }
