--- a/php/src/application/pages/_access.phtml
+++ b/php/src/application/pages/_access.phtml
@@ -1,10 +1,8 @@
 
 [projects]
-yegor256@yahoo.com = r
+director@tpc2.com = r
 
 [wobots]
-yegor256@yahoo.com = rw
+director@tpc2.com = rw
 
-[PMO]
-yegor256@yahoo.com = rw
 
