--- a/php/src/application/pages/_access.phtml
+++ b/php/src/application/pages/_access.phtml
@@ -1,8 +1,9 @@
 
 [projects]
-director@tpc2.com = r
+<?=Model_Pages::ADMIN?> = r
+<?=Model_Project_Test::PM?> = r
 
 [wobots]
-director@tpc2.com = rw
-
+<?=Model_Pages::ADMIN?> = rw
+<?=Model_Project_Test::PM?> = r
 
