--- a/php/src/application/pages/projects/_any.phtml
+++ b/php/src/application/pages/projects/_any.phtml
@@ -1,3 +1,5 @@
-project status page
+<h1>Project "<?=$this->project->name?>"</h1>
 
-project name: 
+<?=$this->bar()
+    ->addLink('Time/Milestones', 'project milestones')
+    ?>
