--- a/php/src/application/views/scripts/panel/header.phtml
+++ b/php/src/application/views/scripts/panel/header.phtml
@@ -13,7 +13,8 @@
     <? $id = 'header_' . md5($page->title); ?>
 
     <span id="<?=$id?>" class="page">
-        <a href="<?=$this->panelUrl($page->title)?>"><?=$page->label?></a><? if ($page->parent->count() > 1): ?><span
+        <a href="<?=$this->panelUrl($page->title)?>"
+            title="go to <?=$this->escape($page->title)?>"><?=$this->escape($page->label)?></a><? if ($page->parent->count() > 1): ?><span
             onclick="selector($('#<?=$id?>'), '<?=$page->title?>')"
             title="click to change">&darr;</span>
         <? endif; ?>
