--- a/php/src/application/pages/wobots.phtml
+++ b/php/src/application/pages/wobots.phtml
@@ -3,7 +3,7 @@
 <?=$this->gallery()
     ->setSource(Model_Wobot::retrieveAll())
     ->setIcon('wobot')
-    ->setLink('{fullName}')
+    ->setLink('{getFullName}')
     ?>
 
 
