--- a/php/src/application/pages/projects/_any/Time.phtml
+++ b/php/src/application/pages/projects/_any/Time.phtml
@@ -1,1 +1,6 @@
 <h1>Time Management</h1>
+
+<?=$this->bar()
+    ->addLink('Milestones', 'Milestones')
+    ->addLink('NetworkDiagram', 'Network Diagram')
+    ?>
