--- a/php/src/application/pages/projects/_any/Integration.phtml
+++ b/php/src/application/pages/projects/_any/Integration.phtml
@@ -1,5 +1,6 @@
 <h1>Integration Management</h1>
 
 <?=$this->bar()
+    ->addLink('Metrics', 'Project Metrics')
     ->addLink('EVA', 'Earned Value Analysis')
     ?>
