--- a/php/src/application/pages/projects/_any/Time.phtml
+++ b/php/src/application/pages/projects/_any/Time.phtml
@@ -1,6 +1,10 @@
 <h1>Time Management</h1>
 
 <?=$this->bar()
+    ->setStyle('stairs')
     ->addLink('Milestones', 'Milestones')
+    ->addLink('ActivityList', 'Activity List')
     ->addLink('NetworkDiagram', 'Network Diagram')
+    ->addLink('Schedule', 'Schedule')
+    ->addLink('GanttChart', 'Gantt Chart')
     ?>
