--- a/php/src/application/pages/projects/_any/Scope/WBS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS.phtml
@@ -4,7 +4,7 @@
 
 <?=$this->table()
     ->setSource($this->project->WBS)
-    ->addColumn('getCode', 'Work package')
-    ->addColumn('getCost', 'Cost, USD')
-    ->addColumn('getSOW', 'Statement of work')
+    ->addColumn('code', 'Work package')
+    ->addColumn('cost', 'Cost, USD')
+    ->addColumn('sow', 'Statement of work')
     ?>
