--- a/php/src/application/pages/projects/_any/Time/ActivityList.phtml
+++ b/php/src/application/pages/projects/_any/Time/ActivityList.phtml
@@ -2,5 +2,5 @@
 
 <?=$this->table()
     ->setSource($this->project->activityList)
-    ->addColumn('name', 'Name')
+    ->addColumn('getName', 'Name')
     ?>
