--- a/php/src/application/pages/projects/_any/Scope/WBS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS.phtml
@@ -5,6 +5,6 @@
 <?=$this->table()
     ->setSource($this->project->wbs)
     ->addColumn('code', 'Work package')
-    ->addColumn('cost', 'Cost, USD')
+    ->addColumn('cost', 'Cost')
     ->addColumn('sow', 'Statement of work')
     ?>
