search implemented by Lucene

--- a/php/src/application/layouts/scripts/layout.phtml
+++ b/php/src/application/layouts/scripts/layout.phtml
@@ -2,6 +2,7 @@
 
     // include global CSS from views/scripts/css
     $this->includeCSS('global.css');
+    $this->includeJQuery();
 
     // set charset
     $this->headMeta()->appendHttpEquiv('Content-Type', 'text/html; charset=' . $this->article->charset);
