--- a/php/src/application/views/scripts/static/index.phtml
+++ b/php/src/application/views/scripts/static/index.phtml
@@ -94,6 +94,7 @@
     </span>    
 
     <span class="rev">
+        <a href="<?=$this->url(array('page'=>$this->article->page), 'pdf', true, false)?>">Download in PDF</a> | 
         Last update on <span style="color:<?=Model_Colors::BLUE?>"><?=$this->article->updated?></span>
     </span>
 </div>
