--- a/php/src/application/views/scripts/css/static.css
+++ b/php/src/application/views/scripts/css/static.css
@@ -171,8 +171,10 @@ div.ll form {
         <?=$this->squeezePNG('search-field.png')?>
         border: none; 
         position: absolute;
-        font-weight: normal; 
-        width: 167px;
+        font-weight: normal;
+        padding-left: 3px;
+        padding-right: 3px; 
+        width: 161px;
         top: 0px;
         left: 0px;
         color: <?=Model_Colors::DARK_GRAY?>;
