--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -9,5 +9,5 @@
     ->addColumn('getTitle', 'Title')
     ->addColumn('result', 'Decision made')
 
-    ->addOption('created', 'decisions/{id}')
+    ->addOption('created', 'decisions/{__id}')
     ?>
