--- a/php/src/application/views/scripts/css/helper/publish.css
+++ b/php/src/application/views/scripts/css/helper/publish.css
@@ -3,6 +3,9 @@ div.wrapper div.publish {
     position: fixed;
     top: 50px;
     left: 30px;
+    background-color: white;
+    padding-bottom: 10px;
+    width: 100%;
 }
 
 /* top content box for publish helper */
