--- a/php/src/application/pages/projects/_any/Time/ActivityList/_any.phtml
+++ b/php/src/application/pages/projects/_any/Time/ActivityList/_any.phtml
@@ -2,6 +2,8 @@
 
 <h1>Activity "<?=$activity->name?>"</h1>
 
+<? $activity->makeAlive() ?>
+
 <p>
     Name: <?=$activity->name?><br/>
     Cost: <?=$activity->cost?><br/>
