we can create and change issues in trac

--- a/php/src/application/pages/projects/_any/Time/ActivityList/_any.phtml
+++ b/php/src/application/pages/projects/_any/Time/ActivityList/_any.phtml
@@ -18,7 +18,7 @@
     isAssigned: <?=$this->yesNo($activity->isAssigned())?><br/>
     isAccepted: <?=$this->yesNo($activity->isAccepted())?><br/>
     isCostEstimated: <?=$this->yesNo($activity->isCostEstimated())?><br/>
-    isDurationEstimated: <?=$this->yesNo($activity->isCostEstimated())?><br/>
+    isDurationEstimated: <?=$this->yesNo($activity->isDurationEstimated())?><br/>
     isStarted: <?=$this->yesNo($activity->isStarted())?><br/>
     isClosed: <?=$this->yesNo($activity->isClosed())?>
 </p>
