--- a/php/src/application/pages/projects/_any/Scope/WBS/requirements/actors/total.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS/requirements/actors/total.phtml
@@ -1,1 +1,4 @@
-<??>
+<p>Actors have to be specified in SRS. We spend 
+    <?=Metric_Requirements_Actors_Total::PORTION * 100?>% of total budget 
+    for functional requirements (which is 
+    <?=$this->project->wbs->sum('requirements\/functional\/total')?>).</p>
