decision factory intro

--- a/php/src/application/pages/projects/_any/Integration/Metrics.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics.phtml
@@ -9,6 +9,8 @@
     ->addColumn('value', 'Value')
     ->addColumn('target', 'Target')
     ->addColumn('delta', 'Delta')
+    
+    ->addOption('target', 'set/{id}')
     ?>
     
     
