--- a/php/src/application/views/scripts/panel/header.phtml
+++ b/php/src/application/views/scripts/panel/header.phtml
@@ -14,7 +14,7 @@
 
     <span id="<?=$id?>" class="page">
         <a href="<?=$this->panelUrl($page->title)?>"
-            title="go to <?=$this->escape($page->title)?>"><?=$this->escape($page->label)?></a><? if ($page->parent->count() > 1): ?><span
+            title="go to <?=$this->escape($page->title)?>"><?=$this->escape(cutLongLine($page->label, 20))?></a><? if ($page->parent->count() > 1): ?><span
             onclick="selector($('#<?=$id?>'), '<?=$page->title?>')"
             title="click to change">&darr;</span>
         <? endif; ?>
