tickets used, estimate requests sent

--- a/php/src/application/tickets/PM/time/activity/estimate/all/ru.phtml
+++ b/php/src/application/tickets/PM/time/activity/estimate/all/ru.phtml
@@ -3,5 +3,5 @@
 потребуется на ее выполнение.
 
 Пока нам нужны эти данные для планирования. Здесь более подробная информация
-о сути задачи: <?=$this->sharedDoc($this->activityDoc)?>
+о сути задачи: <?=$this->uri?>
 
