--- a/php/src/application/tickets/PM/time/activity/estimate/all/en.phtml
+++ b/php/src/application/tickets/PM/time/activity/estimate/all/en.phtml
@@ -1,12 +1,10 @@
 Could you please provide your cost and duration estimates for this task. 
 You should NOT start implementing it now, just give me your estimates.
 
-Here you can find more detailed information about the work you need to do: 
-<?=$this->sharedDoc($this->activityDoc)?>
+Here you can find more detailed information about the work you need to do: <?=$this->uri?>
 
 --
 
 Please, give me your cost and duration estimates using the fields in this ticket.
 
-More info about the work to be done you can find here: 
-<?=$this->sharedDoc($this->activityDoc)?>
+More info about the work to be done you can find here: <?=$this->uri?>
